# SnowEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bin  main.cpp
SnowEngine/: CMakeLists.txt  Core.cpp  Core.h  EntryPoint.h  SnowEngine.h  cmake_install.cmake  main.cpp
SnowEngine/Engine/: SnowEngineAPI.h
SnowEngine/Engine/Core/: Application.cpp  Application.h  Core.cpp  Core.h  IWindow.h  Input.h  KeyCode.h  Log.cpp  Log.h  MouseCode.h  Timestep.h  spch.h
SnowEngine/Engine/Core/Asset/: AssetImportSettings.h  AssetManager.cpp  AssetManager.h  AssetType.h  AssetUtils.cpp  AssetUtils.h
SnowEngine/Engine/Core/Audio/: AudioAssets.h  AudioInstance.cpp  AudioInstance.h  AudioSystem.cpp  AudioSystem.h  MusicAsset.h  MusicInstance.cpp  MusicInstance.h  Sound.cpp  Sound.h  SoundAsset.h  SoundInstance.cpp  SoundInstance.h
SnowEngine/Engine/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SnowEngine/Engine/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
SnowEngine/Engine/Core/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
SnowEngine/Engine/Core/Logging/: Log.cpp  Log.h
SnowEngine/Engine/Core/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
SnowEngine/Engine/Core/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Spritesheet.cpp  Spritesheet.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
SnowEngine/Engine/Core/Renderer/Camera/: Camera.h  CameraController.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
SnowEngine/Engine/Core/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
SnowEngine/Engine/Platform/Linux/: LinuxInput.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
SnowEngine/Engine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
SnowEngine/Engine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
SnowEngine/Engine/Utilities/: PlatformUtils.h  UUID.cpp  UUID.h  YAML_GLM.h
SnowEngineApp/: CMakeLists.txt  Sandbox2D.cpp  Sandbox2D.h  main.cpp
SnowEngineApp/Assets/Shaders/: PlainColor.frag  PlainColor.vert  Texture.frag  Texture.vert
Snowball/: CMakeLists.txt
Snowball/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
Snowball/src/Assets/Scenes/: 3DExample.snow  Example.snow
Snowball/src/Assets/Shaders/: Texture.frag  Texture.vert
Snowball/src/Panels/: AssetPropertiesPanel.cpp  AssetPropertiesPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Snowball/src/Tools/: ProjectManager.cpp  ProjectManager.h
